--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-3 align-self-center ">
+                    <a class="btn btn-block btn-sm btn-warning" href="#reserve">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -72,12 +75,24 @@
         </div>
 
         <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-last col-md-3">
+            <div class="col-12 col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div class="col col-sm order-sm-first col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+            <div class="col col-sm col-md">
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="mt-0">
+                            Weekend Grand Buffet
+                            <span class="badge badge-danger">NEW</span>
+                        </h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice
+                            of five different salads, six enticing appetizers, six main entrees and 
+                            five choicest desserts. Free flowing bubbly and soft drinks. All 
+                            for just $19.99 per person.
+                        </p>
+                    </div>
+                    <img class="d-flex ml-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Buffet">
+                </div>
             </div>
         </div>
 
@@ -96,6 +111,73 @@
                             whos-who in the culinary world, he specializes in
                             creating mouthwatering Indo-Italian fusion experiences.
                         </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row row-content align-items-centre justify-content-center">
+            <div class="col-12 col-sm-8">
+                <div class="card" id="reserve">
+                    <div class="card-header bg-warning text-white">
+                        <h3>Reserve a Table</h3>
+                    </div>
+                    <div class="card-body">
+                        <form>
+                            <div class="row form-group">
+                                <div class="col-md-2">
+                                    <label class="col-form-label" for="numguests">Number of Guests</label>
+                                </div>
+                                <div class="col-md-10" id="numguests">
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label">
+                                            <input class="form-check-input" type="radio" value="1" name="guests">1
+                                        </label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label">
+                                            <input class="form-check-input" type="radio" value="2" name="guests">2
+                                        </label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label">
+                                            <input class="form-check-input" type="radio" value="3" name="guests">3
+                                        </label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label">
+                                            <input class="form-check-input" type="radio" value="4" name="guests">4
+                                        </label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label">
+                                            <input class="form-check-input" type="radio" value="5" name="guests">5
+                                        </label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label">
+                                            <input class="form-check-input" type="radio" value="6" name="guests">6
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <div class="col-md-2">
+                                    <label class="col-form-label" for="date time">Date and Time</label>
+                                </div>
+                                <div class="col-md-4">
+                                    <input class="form-control" id="date" type="text" name="date" placeholder="Date">
+                                </div>
+                                <div class="col-md-4">
+                                    <input class="form-control" id="time" type="text" name="time" placeholder="Time">
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <div class="offset-md-2 col-md-10">
+                                    <button class=" btn btn-primary" type="submit">Reserve</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
