--- a/index.html
+++ b/index.html
@@ -66,7 +66,91 @@
                         </div>
                         <div class="form-row">
                             <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
-                            <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>        
+                            <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="reserveformModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title">Reserve a Table</h3>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="row form-group">
+                            <div class="col-md-2">
+                                <label class="col-form-label" for="numguests">Number of Guests</label>
+                            </div>
+                            <div class="col-md-10" id="numguests">
+                                <div class="form-check form-check-inline">
+                                    <label class="form-check-label">
+                                        <input class="form-check-input" type="radio" value="1" name="guests">1
+                                    </label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <label class="form-check-label">
+                                        <input class="form-check-input" type="radio" value="2" name="guests">2
+                                    </label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <label class="form-check-label">
+                                        <input class="form-check-input" type="radio" value="3" name="guests">3
+                                    </label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <label class="form-check-label">
+                                        <input class="form-check-input" type="radio" value="4" name="guests">4
+                                    </label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <label class="form-check-label">
+                                        <input class="form-check-input" type="radio" value="5" name="guests">5
+                                    </label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <label class="form-check-label">
+                                        <input class="form-check-input" type="radio" value="6" name="guests">6
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row form-group">
+                            <div class="col-md-2">
+                                <label class="col-form-label" for="section">Section</label>
+                            </div>
+                            <div class="col-md" id="section">
+                                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                    <label class="btn btn-success active">
+                                        <input type="radio" name="section" value="nonsmoking" checked>Non-Smoking
+                                    </label>
+                                    <label class="btn btn-danger">
+                                        <input type="radio" name="section" value="smoking">Smoking
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row form-group">
+                            <div class="col-md-2">
+                                <label class="col-form-label" for="date time">Date and Time</label>
+                            </div>
+                            <div class="col-md-5">
+                                <input class="form-control" id="date" type="text" name="date" placeholder="Date">
+                            </div>
+                            <div class="col-md-5">
+                                <input class="form-control" id="time" type="text" name="time" placeholder="Time">
+                            </div>
+                        </div>
+                        <div class="row form-group">
+                            <div class="offset-md-2 col-md-10">
+                                <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                                <button class=" btn btn-primary btn-sm" type="submit">Reserve</button>
+                            </div>
                         </div>
                     </form>
                 </div>
@@ -85,9 +169,8 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center ">
-                    <a role="button" class="btn btn-block nav-link btn-warning"
-                        data-toggle="tooltip" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
-                        data-placement="bottom" href="#reserveform">Reserve Table
+                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="modal" data-target="#reserveformModal">
+                        Reserve Table
                     </a>
                 </div>
             </div>
@@ -212,73 +295,6 @@
                 </div>
             </div>
         </div>
-
-        <div class="row row-content align-items-centre justify-content-center">
-            <div class="col-12 col-sm-8">
-                <div class="card" id="reserveform">
-                    <div class="card-header bg-warning text-white">
-                        <h3>Reserve a Table</h3>
-                    </div>
-                    <div class="card-body">
-                        <form>
-                            <div class="row form-group">
-                                <div class="col-md-2">
-                                    <label class="col-form-label" for="numguests">Number of Guests</label>
-                                </div>
-                                <div class="col-md-10" id="numguests">
-                                    <div class="form-check form-check-inline">
-                                        <label class="form-check-label">
-                                            <input class="form-check-input" type="radio" value="1" name="guests">1
-                                        </label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <label class="form-check-label">
-                                            <input class="form-check-input" type="radio" value="2" name="guests">2
-                                        </label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <label class="form-check-label">
-                                            <input class="form-check-input" type="radio" value="3" name="guests">3
-                                        </label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <label class="form-check-label">
-                                            <input class="form-check-input" type="radio" value="4" name="guests">4
-                                        </label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <label class="form-check-label">
-                                            <input class="form-check-input" type="radio" value="5" name="guests">5
-                                        </label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <label class="form-check-label">
-                                            <input class="form-check-input" type="radio" value="6" name="guests">6
-                                        </label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row form-group">
-                                <div class="col-md-2">
-                                    <label class="col-form-label" for="date time">Date and Time</label>
-                                </div>
-                                <div class="col-md-4">
-                                    <input class="form-control" id="date" type="text" name="date" placeholder="Date">
-                                </div>
-                                <div class="col-md-4">
-                                    <input class="form-control" id="time" type="text" name="time" placeholder="Time">
-                                </div>
-                            </div>
-                            <div class="row form-group">
-                                <div class="offset-md-2 col-md-10">
-                                    <button class=" btn btn-primary" type="submit">Reserve</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 
     <footer class="footer">
@@ -327,11 +343,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
 </body>
 
 </html>
