--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <a id="toggleLogin">
                         <span class="fa fa-sign-in"></span> Login
                     </a>
                 </span>
@@ -74,7 +74,7 @@
         </div>
     </div>
 
-    <div id="reserveformModal" class="modal fade" role="dialog">
+    <div id="reserveModal" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" role="content">
             <div class="modal-content">
                 <div class="modal-header">
@@ -169,7 +169,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center ">
-                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="modal" data-target="#reserveformModal">
+                    <a role="button" class="btn btn-block nav-link btn-warning" id="toggleReserve">
                         Reserve Table
                     </a>
                 </div>
@@ -360,6 +360,12 @@
                     $("#carouselButton").children("span").removeClass('fa-play');
                     $("#carouselButton").children("span").addClass('fa-pause');                    
                 }
+            });
+            $('#toggleReserve').click(function(){
+                $('#reserveModal').modal('toggle');
+            });
+            $('#toggleLogin').click(function(){
+                $('#loginModal').modal('toggle');
             });
         });
     </script>
